--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Pods/Realm filter=lfs diff=lfs merge=lfs -text
 Pods/Realm/core/realm-monorepo.xcframework/watchos-arm64_i386_x86_64-simulator/librealm-monorepo.a filter=lfs diff=lfs merge=lfs -text
+Pods/Realm/core/realm-monorepo.xcframework/ios-arm64_i386_x86_64-simulator/librealm-monorepo.a filter=lfs diff=lfs merge=lfs -text
