--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
+before_install:
+  - gem install cocoapods
+install:
+  - brew update && brew upgrade swiftlint
+  - pod install
 os: osx
 osx_image: xcode12.2
 language: swift
+xcode_scheme: NBackGame
 script: xcodebuild clean build test -workspace NBackGame.xcworkspace -scheme "NBackGame" -sdk iphonesimulator -destination "platform=iOS Simulator,OS=14.2,name=iPhone 11" ONLY_ACTIVE_ARCH=YES CODE_SIGNING_REQUIRED=NO
