--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ install:
 os: osx
 osx_image: xcode12.2
 language: swift
+xcode_workspace: NBackGame.xcwordspace
 xcode_scheme: NBackGame
 script: xcodebuild clean build test -workspace NBackGame.xcworkspace -scheme "NBackGame" -sdk iphonesimulator -destination "platform=iOS Simulator,OS=14.2,name=iPhone 11" ONLY_ACTIVE_ARCH=YES CODE_SIGNING_REQUIRED=NO
