--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ language: swift
 xcode_workspace: NBackGame.xcworkspace
 xcode_scheme: NBackGame
 xcode_destination: platform=iOS Simulator,OS=14.2,name=iPhone 11
+script:
  - swiftlint
  - xcodebuild clean build test -workspace NBackGame.xcworkspace -scheme "NBackGame" -destination "platform=iOS Simulator,OS=14.2,name=iPhone 11"
