--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 Pods/Realm filter=lfs diff=lfs merge=lfs -text
 Pods/Realm/core/realm-monorepo.xcframework/watchos-arm64_i386_x86_64-simulator/librealm-monorepo.a filter=lfs diff=lfs merge=lfs -text
 Pods/Realm/core/realm-monorepo.xcframework/ios-arm64_i386_x86_64-simulator/librealm-monorepo.a filter=lfs diff=lfs merge=lfs -text
+Pods/Realm/core/realm-monorepo.xcframework/ios-arm64_x86_64_i386-simulator/librealm-monorepo.a filter=lfs diff=lfs merge=lfs -text
+Pods/Realm/core/realm-monorepo.xcframework/tvos-arm64_x86_64-simulator/librealm-monorepo.a filter=lfs diff=lfs merge=lfs -text
+Pods/Realm/core/realm-monorepo.xcframework/ios-armv7_arm64/librealm-monorepo.a filter=lfs diff=lfs merge=lfs -text
+Pods/Realm/core/realm-monorepo.xcframework/watchos-arm64_i386_x86_64-simulator/librealm-monorepo.a filter=lfs diff=lfs merge=lfs -text
+*.librealm-monorepo.a filter=lfs diff=lfs merge=lfs -text
