--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -2,8 +2,8 @@ name: Stable flow
 on:
   push:
     branches: [ stable ]
-  # pull_request:
-  #   branches: [ stable ] # Remove it later
+  pull_request:
+    branches: [ stable ] # Remove it later
 
   # Allows you to run this workflow manually from the Actions a tab
   workflow_dispatch:
@@ -41,18 +41,3 @@ jobs:
           APPLE_KEY_CONTENT: '${{ secrets.APPLE_KEY_CONTENT }}'
           GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
           GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
-      - name: Bump stable xcode-version
-        uses: maierj/fastlane-action@v1.4.0
-        with:
-          lane: update_bump_stable_version
-        env: 
-          GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
-          GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
-      - name: Push changes to dev
-        uses: maierj/fastlane-action@v1.4.0
-        with:
-          lane: push_new_stable_to_dev
-        env:
-          GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
-          GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
-
