--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -1,4 +1,4 @@
-name: Stable flow
+name: Main flow
 on:
   push:
     branches: [ stable ]
@@ -22,7 +22,7 @@ jobs:
       - name: Deploy to TestFlight
         uses: maierj/fastlane-action@v1.4.0
         with:
-          lane: deploy_to_testflight
+          lane: deploy_to_appstore
         env:
           BUNDLE_ID: '${{ secrets.BUNDLE_ID }}'
           APP_STORE_CONNECT_TEAM_ID: '${{ secrets.APP_STORE_CONNECT_TEAM_ID }}'
