Disable Stable flow

--- a/.github/workflows/stable_flow.yml
+++ b/.github/workflows/stable_flow.yml
@@ -1,7 +1,7 @@
 name: Stable flow
 on:
-  push:
-    branches: [ stable ]
+  # push:
+  #   branches: [ stable ]
   # pull_request:
   #   branches: [ stable ] # Remove it later
 
