--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   deploy:
-    name: Deploying to Testflight
+    name: Deploying to App Store
     runs-on: macOS-latest
     
     steps:
