--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Deploy to TestFlight
         uses: maierj/fastlane-action@v1.4.0
         with:
-          lane: deploy_to_appstore2
+          lane: deploy_to_appstore
         env:
           BUNDLE_ID: '${{ secrets.BUNDLE_ID }}'
           APP_STORE_CONNECT_TEAM_ID: '${{ secrets.APP_STORE_CONNECT_TEAM_ID }}'
