--- a/.github/workflows/stable_flow.yml
+++ b/.github/workflows/stable_flow.yml
@@ -1,9 +1,7 @@
 name: Stable flow
 on:
-  # push:
-  #   branches: [ stable ]
-  # pull_request:
-  #   branches: [ stable ] # Remove it later
+  push:
+    branches: [ stable ]
 
   # Allows you to run this workflow manually from the Actions a tab
   workflow_dispatch:
