Add the rest of flow

--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -46,10 +46,17 @@ jobs:
         env: 
           GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
           GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
-      - name: Push changes to dev
+      - name: Push changes to stable
         uses: maierj/fastlane-action@v1.4.0
         with:
           lane: push_new_main_to_stable
+        env:
+          GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
+          GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
+      - name: Push changes to dev
+        uses: maierj/fastlane-action@v1.4.0
+        with:
+          lane: push_new_main_to_dev
         env:
           GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
           GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
