--- a/.github/workflows/stable_flow.yml
+++ b/.github/workflows/stable_flow.yml
@@ -41,6 +41,7 @@ jobs:
           APPLE_KEY_CONTENT: '${{ secrets.APPLE_KEY_CONTENT }}'
           GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
           GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
+          PR_BODY: '${{ github.event.pull_request.body }}'
       - name: Bump stable xcode-version
         uses: maierj/fastlane-action@v1.4.0
         with:
