--- a/.github/workflows/stable_flow.yml
+++ b/.github/workflows/stable_flow.yml
@@ -43,18 +43,18 @@ jobs:
           GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
           PR_BODY: '${{ github.event.pull_request.body }}'
           ITMSTRANSPORTER_FORCE_ITMS_PACKAGE_UPLOAD: true
-      - name: Bump stable xcode-version
-        uses: maierj/fastlane-action@v1.4.0
-        with:
-          lane: update_bump_stable_version
-        env: 
-          GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
-          GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
-      - name: Push changes to dev
-        uses: maierj/fastlane-action@v1.4.0
-        with:
-          lane: push_new_stable_to_dev
-        env:
-          GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
-          GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
+      # - name: Bump stable xcode-version
+      #   uses: maierj/fastlane-action@v1.4.0
+      #   with:
+      #     lane: update_bump_stable_version
+      #   env: 
+      #     GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
+      #     GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
+      # - name: Push changes to dev
+      #   uses: maierj/fastlane-action@v1.4.0
+      #   with:
+      #     lane: push_new_stable_to_dev
+      #   env:
+      #     GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
+      #     GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
 
