--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           xcode-version: '13.2.1'
       - name: Test
-        run: xcodebuild clean test -workspace NBackGame.xcworkspace -scheme "NBackGame" -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.2,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+        run: xcodebuild clean test -project NBackGame.xcodeproj -scheme "NBackGame" -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.2,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
       - name: Deploy to TestFlight
         uses: maierj/fastlane-action@v1.4.0
         with:
@@ -42,6 +42,7 @@ jobs:
           GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
           GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
           PR_BODY: '${{ github.event.pull_request.body }}'
+          ITMSTRANSPORTER_FORCE_ITMS_PACKAGE_UPLOAD: true
       - name: Bump main xcode-version
         uses: maierj/fastlane-action@v1.4.0
         with:
