--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Deploy to TestFlight
         uses: maierj/fastlane-action@v2.3.0
         with:
+          xcode-version: '14.1'
           lane: deploy_to_appstore
         env:
           BUNDLE_ID: '${{ secrets.BUNDLE_ID }}'
