--- a/.github/workflows/stable_flow.yml
+++ b/.github/workflows/stable_flow.yml
@@ -44,7 +44,7 @@ jobs:
           GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
           GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
           PR_BODY: '${{ github.event.head_commit.message }}'
-          ITMSTRANSPORTER_FORCE_ITMS_PACKAGE_UPLOAD: true
+          ITMSTRANSPORTER_FORCE_ITMS_PACKAGE_UPLOAD: false
       - name: Bump stable xcode-version
         uses: maierj/fastlane-action@v1.4.0
         with:
