--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -1,7 +1,7 @@
 name: Main flow
 on:
   push:
-    branches: [ ]
+    branches: [ none ]
 
   # Allows you to run this workflow manually from the Actions a tab
   workflow_dispatch:
