Adjust actions for stable and dev

--- a/.github/workflows/stable_flow.yml
+++ b/.github/workflows/stable_flow.yml
@@ -52,10 +52,10 @@ jobs:
         env: 
           GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
           GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
-#      - name: Push changes to dev
-#        uses: maierj/fastlane-action@v1.4.0
-#        with:
-#          lane: push_new_stable_to_dev
-#        env:
-#          GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
-#          GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
+     - name: Push changes to dev
+       uses: maierj/fastlane-action@v1.4.0
+       with:
+         lane: push_new_stable_to_dev
+       env:
+         GIT_USERNAME: '${{ secrets.GIT_USERNAME }}'
+         GIT_EMAIL: '${{ secrets.GIT_EMAIL }}'
