--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,9 @@ fastlane/archives/
 # SPM
 /.build
 /Packages
-/*.xcodeproj
+# /*.xcodeproj It's commented because it was creating issues with Github Actions and fastlane commit_version_bump command
 xcuserdata/
+
+
+# Ignore bundler config
+/.bundle
