--- a/.github/workflows/stable_flow.yml
+++ b/.github/workflows/stable_flow.yml
@@ -20,7 +20,7 @@ jobs:
 #      - name: Build
 #        run: xcodebuild clean build test -project NBackGame.xcodeproj -scheme "NBackGame" -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.2,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
       - name: Deploy to TestFlight
-        uses: maierj/fastlane-action@vv2.3.0
+        uses: maierj/fastlane-action@v2.3.0
         with:
           xcode-version: '14.1'
           lane: deploy_to_testflight
