--- a/.github/workflows/dev_flow.yml
+++ b/.github/workflows/dev_flow.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           xcode-version: '13.2.1'
       - name: Test
-        run: xcodebuild clean test -project NBackGame.xcodeproj -scheme "NBackGame" -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.2,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+        run: xcodebuild clean build test -project NBackGame.xcodeproj -scheme "NBackGame" -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.2,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
       - name: Create PR to Stable
         uses: maierj/fastlane-action@v1.4.0
         with:
