Enable UI tests

--- a/.github/workflows/dev_flow.yml
+++ b/.github/workflows/dev_flow.yml
@@ -25,3 +25,4 @@ jobs:
           lane: create_pr_to_stable
         env:
           GIT_AUTHORIZATION: '${{ secrets.GIT_AUTHORIZATION }}'
+          COMMIT_TITLE: '${{ github.event.head_commit.message }}'
