--- a/NBackGame.xcodeproj/xcshareddata/xcschemes/NBackGame.xcscheme
+++ b/NBackGame.xcodeproj/xcshareddata/xcschemes/NBackGame.xcscheme
@@ -75,6 +75,12 @@
             ReferencedContainer = "container:NBackGame.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
