--- a/.github/workflows/stable_flow.yml
+++ b/.github/workflows/stable_flow.yml
@@ -3,10 +3,10 @@ on:
   push:
     branches: [ stable ]
 
-  # Allows you to run this workflow manually from the Actions a tab
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-jobs:   
+jobs:
   deploy:
     name: Deploying to Testflight
     runs-on: macOS-latest
@@ -17,8 +17,8 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '14.1'
-     - name: Build
-       run: xcodebuild clean build  -project NBackGame.xcodeproj -scheme "NBackGame" -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.2,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+      - name: Build
+        run: xcodebuild clean build -project NBackGame.xcodeproj -scheme "NBackGame" -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.2,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
       - name: Deploy to TestFlight
         uses: maierj/fastlane-action@v2.3.0
         with:
