--- a/.github/workflows/dev_flow.yml
+++ b/.github/workflows/dev_flow.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy:
     name: Run tests
-    runs-on: macOS-latest
+    runs-on: macOS-13
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
