Update main/stable workflow to set xcode version to 13

--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   deploy:
     name: Deploying to App Store
-    runs-on: macOS-latest
+    runs-on: macOS-13
     
     steps:
       - name: Checkout repository
