--- a/.github/workflows/dev_flow.yml
+++ b/.github/workflows/dev_flow.yml
@@ -8,6 +8,8 @@ jobs:
     name: Run tests
     runs-on: macOS-13
     steps:
+      - name: check fastlane
+        run: fastlane --version
       - name: Checkout repository
         uses: actions/checkout@v3
       - uses: maxim-lobanov/setup-xcode@v1
